objects/Complaint__c.object
<CustomObject>
    <description>A child object of Case to be used in arbitration claims process to log the complaints that accompany a claim.</description>
    <fields>
        <fullName>Auction_Number_Complaint__c</fullName>
        <formula>arbitration_id__r.Auction_Number__r.id__c</formula>
        <label>Auction Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avoidable_Notes__c</fullName>
        <label>Avoidable Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avoidable_Reason__c</fullName>
        <description>Why was this complaint avoidable - filled out in the complaint flow</description>
        <inlineHelpText>Why was this complaint avoidable</inlineHelpText>
        <label>Avoidable Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>avoidable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Included in photos, not in notes - VCI Error</fullName>
                </value>
                <value>
                    <fullName>Included in notes, not in photos - VCI Error</fullName>
                </value>
                <value>
                    <fullName>Included in amp recording, not in notes - VCI Error</fullName>
                </value>
                <value>
                    <fullName>Described incorrectly - VCI Error</fullName>
                </value>
                <value>
                    <fullName>Not included at all in CR - VCI Error</fullName>
                </value>
                <value>
                    <fullName>Not covered by policy</fullName>
                </value>
                <value>
                    <fullName>High speed issue - Seller Intentional</fullName>
                </value>
                <value>
                    <fullName>Codes cleared ahead of inspection- Seller Intentional</fullName>
                </value>
                <value>
                    <fullName>Vehicle ran prior to inspection - Seller Intentional</fullName>
                </value>
                <value>
                    <fullName>Known issue prior to inspection not disclosed - Seller Intentional</fullName>
                </value>
                <value>
                    <fullName>Seller Unintentional</fullName>
                </value>
                <value>
                    <fullName>No Evidence Collected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Parent_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Arbitration_Claim_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Created__c</fullName>
        <description>Date complaint was created Filled in with a Workflow &quot;Complaint Created Time Stamp&quot;</description>
        <label>Complaint Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complaint_Sub_Type_Bucket__c</fullName>
        <label>Complaint Sub-Type Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drivability</fullName>
                </value>
                <value>
                    <fullName>Engine Accessory Issue</fullName>
                </value>
                <value>
                    <fullName>Abnormal Exhaust Smoke</fullName>
                </value>
                <value>
                    <fullName>Interior Cosmetic Damage</fullName>
                </value>
                <value>
                    <fullName>Tire/Rim Damage/Issue</fullName>
                </value>
                <value>
                    <fullName>Title / VIN / Trim Level Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Shifting Issue</fullName>
                </value>
                <value>
                    <fullName>Transmission Issue</fullName>
                </value>
                <value>
                    <fullName>Warning Lamps / Codes</fullName>
                </value>
                <value>
                    <fullName>Interior Mechanical Issue</fullName>
                </value>
                <value>
                    <fullName>Body Damage</fullName>
                </value>
                <value>
                    <fullName>Undisclosed Aftermarket Accessory</fullName>
                </value>
                <value>
                    <fullName>Missing Interior Equipment</fullName>
                </value>
                <value>
                    <fullName>Steering Issue</fullName>
                </value>
                <value>
                    <fullName>Missing or Inop Keys or Collateral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_guid__c</fullName>
        <description>GUID generated in Salesforce to identify this unique Complaint Record across Datahub systems</description>
        <externalId>true</externalId>
        <label>Complaint guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <description>Stores the complexity rating of the claim.</description>
        <inlineHelpText>A - High Complexity
B - Medium Complexity
C - Low Complexity</inlineHelpText>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>Power of one formula for reporting on Complaints with Resolutions without double-counting Complaints.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <formula>&quot;Claim Type: &quot; &amp; TEXT(Claim_Parent_Type__c) &amp; BR() &amp;
&quot;Claim Sub-Type: &quot; &amp; TEXT(claim_type__c) &amp; BR() &amp;
&quot;Resolution Count: &quot; &amp; TEXT(Resolution_Count__c) &amp; BR() &amp;
&quot;Resolution Amount: $&quot; &amp; TEXT(Resolution_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Review__c</fullName>
        <description>Used for flow to determine if the Valid and avoidable fields filled out</description>
        <label>Needs Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Close_Resolutions__c</fullName>
        <label>Post Close Resolutions</label>
        <summaryFilterItems>
            <field>Resolution__c.Post_Close_Resolution__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Resolution__c.complaint_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resolution_Amount__c</fullName>
        <description>Rolls up the sum of resolutions against a complaint.</description>
        <label>Resolution Amount</label>
        <summarizedField>Resolution__c.Amount__c</summarizedField>
        <summaryForeignKey>Resolution__c.complaint_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resolution_Count__c</fullName>
        <description>Counts the number of resolutions against a complaint.</description>
        <label>Resolution Count</label>
        <summaryForeignKey>Resolution__c.complaint_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Review_Completed__c</fullName>
        <description>Checks if all reviewed fields are checked to help place validation rule on case - do not allow case to be moved to &quot;Reviewed&quot; unless complaint total matches reviewed total</description>
        <formula>IF( AND(Reviewed_Valid__c = True,
 Reviewed_Avoidable__c = True,
 Reviewed_Avoidable_Reason__c= True, 
 Reviewed_Invalid_Reason__c = True),1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviewed_Avoidable_Reason__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that the reviewer acknowledged the Avoidable Reason selection</description>
        <label>Reviewed Avoidable Reason</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_Avoidable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that the reviewer acknowledged the Avoidable selection</description>
        <label>Reviewed Avoidable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_Invalid_Reason__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that the reviewer acknowledged the Invalid selection</description>
        <inlineHelpText>This will only be filled in on an INVALID claim</inlineHelpText>
        <label>Reviewed Invalid Reason</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that the reviewer acknowledged the Valid selection</description>
        <label>Reviewed Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Credits__c</fullName>
        <label>Total Approved Credits</label>
        <summarizedField>Resolution__c.Approved_Credits__c</summarizedField>
        <summaryForeignKey>Resolution__c.complaint_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>arbitration_id__c</fullName>
        <description>Stores the reference to the Arbitration case.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>avoidable__c</fullName>
        <label>Avoidable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>claim_type__c</fullName>
        <description>Stores the types of Complaints a buyer can claim.</description>
        <label>Claim Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Claim_Parent_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Arbitration_Claim_Sub_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>complaint_type__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Arbitration_Complaint_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>Stores the details of the Complaint.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>The external ID for this complaint from ACV DB.</description>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>insurance__c</fullName>
        <description>The type field of the parent Case. This maps to the insurance field in ACV DB.</description>
        <formula>TEXT(arbitration_id__r.Type)</formula>
        <label>Arbitration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invalid_Reason__c</fullName>
        <description>Reason why invalid was selected on the complaint</description>
        <inlineHelpText>Why was this marked as invalid?</inlineHelpText>
        <label>Invalid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>valid__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Component not covered by policy</fullName>
                </value>
                <value>
                    <fullName>Outside of timeframe</fullName>
                </value>
                <value>
                    <fullName>Disclosed Properly in CR</fullName>
                </value>
                <value>
                    <fullName>Wearable Part</fullName>
                </value>
                <value>
                    <fullName>Does not Meet Minimum Dollar Threshold</fullName>
                </value>
                <value>
                    <fullName>No Evidence Collected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>valid__c</fullName>
        <description>Field used by Resolution Validation Rule.  Field is required in order to resolve complaint</description>
        <inlineHelpText>Field is required in order to resolve complaint</inlineHelpText>
        <label>Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint</label>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <recordTypes>
        <fullName>Arbitration_Complaint</fullName>
        <active>true</active>
        <label>Arbitration Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>CR_Review_Issue</fullName>
        <active>true</active>
        <label>CR Review Issue</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Avoidable_Yes_must_have_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>And (  $Profile.Name != &quot;System Administrator&quot;,
 ISPICKVAL( avoidable__c, &quot;Yes&quot;),
  ISBLANK( Avoidable_Notes__c )
)</errorConditionFormula>
        <errorDisplayField>Avoidable_Notes__c</errorDisplayField>
        <errorMessage>You must add details to the Avoidable Notes field in order to save this record as Avoidable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Avoidable_if_Valid_is_No</fullName>
        <active>false</active>
        <description>This rule prevents a user from specifying whether a claim was Avoidable or not if the claim is not Valid.</description>
        <errorConditionFormula>ISPICKVAL(valid__c, &quot;No&quot;) &amp;&amp; NOT(ISBLANK(TEXT(avoidable__c)))</errorConditionFormula>
        <errorDisplayField>avoidable__c</errorDisplayField>
        <errorMessage>Please leave Avoidable as &quot;None&quot; if the Claim is not Valid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Avoidable_if_Valid_equals_Yes</fullName>
        <active>false</active>
        <description>This rule requires a user to specify whether a claim was Avoidable if Valid = Yes</description>
        <errorConditionFormula>ISPICKVAL(valid__c, &quot;Yes&quot;) &amp;&amp; ISBLANK(TEXT(avoidable__c))</errorConditionFormula>
        <errorDisplayField>avoidable__c</errorDisplayField>
        <errorMessage>You must specify whether a Valid claim was Avoidable or not.</errorMessage>
    </validationRules>
</CustomObject>